# Generated by Django 6.0.3 on 2026-03-15 20:48

import django.db.models.deletion
import simple_history.models
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('patients', '0001_initial'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='CustomQuestion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('is_active', models.BooleanField(default=True)),
                ('text', models.CharField(max_length=500)),
            ],
            options={
                'verbose_name': 'Custom Question',
                'verbose_name_plural': 'Custom Questions',
            },
        ),
        migrations.CreateModel(
            name='GeneralQuestion',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('is_active', models.BooleanField(default=True)),
                ('text', models.CharField(max_length=500)),
                ('associated_risk', models.CharField(choices=[('LOW', 'Low'), ('MEDIUM', 'Medium'), ('HIGH', 'High')], max_length=10)),
            ],
            options={
                'verbose_name': 'General Question',
                'verbose_name_plural': 'General Questions',
            },
        ),
        migrations.CreateModel(
            name='Report',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('is_active', models.BooleanField(default=True)),
                ('submitted_at', models.DateTimeField(auto_now_add=True)),
                ('calculated_risk', models.CharField(blank=True, choices=[('LOW', 'Low'), ('MEDIUM', 'Medium'), ('HIGH', 'High')], max_length=10, null=True)),
                ('validated_risk', models.CharField(blank=True, choices=[('LOW', 'Low'), ('MEDIUM', 'Medium'), ('HIGH', 'High')], max_length=10, null=True)),
                ('review_status', models.CharField(choices=[('PENDING', 'Pending'), ('REVIEWED', 'Reviewed')], default='PENDING', max_length=15)),
                ('medical_notes', models.TextField(blank=True, null=True)),
            ],
            options={
                'verbose_name': 'Report',
                'verbose_name_plural': 'Reports',
            },
        ),
        migrations.CreateModel(
            name='Answer',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('is_active', models.BooleanField(default=True)),
                ('value', models.TextField(help_text='Response from the owner (Yes/No or text)')),
                ('custom_question', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='monitoring.customquestion')),
                ('general_question', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, to='monitoring.generalquestion')),
                ('report', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='answers', to='monitoring.report')),
            ],
            options={
                'verbose_name': 'Answer',
                'verbose_name_plural': 'Answers',
            },
        ),
        migrations.CreateModel(
            name='SurgicalMonitoring',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('is_active', models.BooleanField(default=True)),
                ('surgery_type', models.CharField(max_length=255)),
                ('surgery_date', models.DateTimeField()),
                ('report_frequency_hours', models.IntegerField(default=24, help_text='Frequency of reports in hours')),
                ('status', models.CharField(choices=[('ACTIVE', 'Active'), ('DISCHARGED', 'Discharged')], default='ACTIVE', max_length=20)),
                ('patient', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='monitorings', to='patients.patient')),
            ],
            options={
                'verbose_name': 'Surgical Monitoring',
                'verbose_name_plural': 'Surgical Monitorings',
            },
        ),
        migrations.AddField(
            model_name='report',
            name='monitoring',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='reports', to='monitoring.surgicalmonitoring'),
        ),
        migrations.CreateModel(
            name='HistoricalReport',
            fields=[
                ('id', models.BigIntegerField(auto_created=True, blank=True, db_index=True, verbose_name='ID')),
                ('created_at', models.DateTimeField(blank=True, editable=False)),
                ('updated_at', models.DateTimeField(blank=True, editable=False)),
                ('is_active', models.BooleanField(default=True)),
                ('submitted_at', models.DateTimeField(blank=True, editable=False)),
                ('calculated_risk', models.CharField(blank=True, choices=[('LOW', 'Low'), ('MEDIUM', 'Medium'), ('HIGH', 'High')], max_length=10, null=True)),
                ('validated_risk', models.CharField(blank=True, choices=[('LOW', 'Low'), ('MEDIUM', 'Medium'), ('HIGH', 'High')], max_length=10, null=True)),
                ('review_status', models.CharField(choices=[('PENDING', 'Pending'), ('REVIEWED', 'Reviewed')], default='PENDING', max_length=15)),
                ('medical_notes', models.TextField(blank=True, null=True)),
                ('history_id', models.AutoField(primary_key=True, serialize=False)),
                ('history_date', models.DateTimeField(db_index=True)),
                ('history_change_reason', models.CharField(max_length=100, null=True)),
                ('history_type', models.CharField(choices=[('+', 'Created'), ('~', 'Changed'), ('-', 'Deleted')], max_length=1)),
                ('history_user', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='+', to=settings.AUTH_USER_MODEL)),
                ('monitoring', models.ForeignKey(blank=True, db_constraint=False, null=True, on_delete=django.db.models.deletion.DO_NOTHING, related_name='+', to='monitoring.surgicalmonitoring')),
            ],
            options={
                'verbose_name': 'historical Report',
                'verbose_name_plural': 'historical Reports',
                'ordering': ('-history_date', '-history_id'),
                'get_latest_by': ('history_date', 'history_id'),
            },
            bases=(simple_history.models.HistoricalChanges, models.Model),
        ),
        migrations.AddField(
            model_name='customquestion',
            name='monitoring',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='custom_questions', to='monitoring.surgicalmonitoring'),
        ),
        migrations.CreateModel(
            name='VisualEvidence',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('is_active', models.BooleanField(default=True)),
                ('image_url', models.URLField(help_text='URL from ImgBB', max_length=500)),
                ('report', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='evidences', to='monitoring.report')),
            ],
            options={
                'verbose_name': 'Visual Evidence',
                'verbose_name_plural': 'Visual Evidences',
            },
        ),
    ]
